// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_mysql_util;

import "repr/src/relation_and_scalar.proto";

message ProtoMySqlTableDesc {
  string name = 1;
  string schema_name = 2;
  repeated ProtoMySqlColumnDesc columns = 3;
  repeated ProtoMySqlKeyDesc keys = 4;
}

message ProtoMySqlColumnMetaEnum {
  repeated string values = 1;
}

message ProtoMySqlColumnMetaJson {}

message ProtoMySqlColumnMetaYear {}

message ProtoMySqlColumnMetaDate {}

message ProtoMySqlColumnMetaTimestamp {
  uint32 precision = 1;
}

message ProtoMySqlColumnMetaBit {
  uint32 precision = 1;
}

message ProtoMySqlColumnDesc {
  string name = 1;
  optional mz_repr.relation_and_scalar.ProtoColumnType column_type = 2;

  oneof meta {
    ProtoMySqlColumnMetaEnum enum = 3;
    ProtoMySqlColumnMetaJson json = 4;
    ProtoMySqlColumnMetaYear year = 5;
    ProtoMySqlColumnMetaDate date = 6;
    ProtoMySqlColumnMetaTimestamp timestamp = 7;
    ProtoMySqlColumnMetaBit bit = 8;
  }
}

message ProtoMySqlKeyDesc {
  string name = 1;
  bool is_primary = 2;
  repeated string columns = 3;
}
